# SudokuSolver

./: .editorconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: build.yml
examples/: easy_9x9.json  hard_escargot.json  puzzle_16x16.json  string_format.json
include/: benchmark.hpp  board.hpp  json_handler.hpp  ocr_processor.hpp  solver.hpp  solver_backtrack.hpp  solver_dlx.hpp  system_info.hpp  types.hpp
src/: benchmark.cpp  board.cpp  json_handler.cpp  main.cpp  ocr_processor.cpp  solver_backtrack.cpp  solver_dlx.cpp  system_info.cpp
tessdata/: Download_OCR_Trained_Data.txt
